# math-py-test

./: CMakeLists.txt  README.md  derivative.py  function.cpp  function.hpp  function.py  main.cpp  pythonembedded.hpp
gui/: dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
